<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextShowNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/darkGrey"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:paddingTop="10pt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAC"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:text="@string/ac"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddOrMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:text="@string/addOrMinus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPercentage"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:onClick="buttonPercentage"
                tools:ignore="UsingOnClickInXml"
                android:textStyle="bold"
                android:text="@string/percentage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivide"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="buttonOperationEvent"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textStyle="bold"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:textSize="18sp"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textStyle="bold"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiply"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="buttonOperationEvent"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/whiteback"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:background="@color/whiteback"
                android:textStyle="bold"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:background="@color/whiteback"
                android:textStyle="bold"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="buttonOperationEvent"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:background="@color/whiteback"
                android:textStyle="bold"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:background="@color/whiteback"
                android:textStyle="bold"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buttonNumberEvent"
                tools:ignore="UsingOnClickInXml"
                android:textSize="18sp"
                android:background="@color/whiteback"
                android:textStyle="bold"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="buttonOperationEvent"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="60pt"
            android:layout_height="30pt"
            android:layout_weight="1"
            android:background="@color/whiteback"
            android:textStyle="bold"
            android:onClick="buttonNumberEvent"
            tools:ignore="UsingOnClickInXml"
            android:textSize="18sp"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDot"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="0.5"
            android:onClick="buttonNumberEvent"
            tools:ignore="UsingOnClickInXml"
            android:textSize="18sp"
            android:background="@color/whiteback"
            android:textStyle="bold"
            android:text="@string/dot" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEqual"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="0.5"
            android:onClick="buttonEqualEvent"
            tools:ignore="UsingOnClickInXml"
            android:textSize="18sp"
            android:background="@color/orange"
            android:textStyle="bold"
            android:text="@string/equal"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>